# nutremais

./: Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/domain/: cardapio.py  login.py  register.py
app/models/: database_initialize.py  models.py  requests.py
app/routes/: cardapio.py  login.py
app/utils/: deps.py
